<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register"
    android:background="@drawable/h"
    >
    <EditText
        android:id="@+id/u1"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:hint="@string/name"
        android:background="@drawable/rgstrfrm"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.11"
        />
    <EditText
        android:id="@+id/n1"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:inputType="number"
        android:background="@drawable/rgstrfrm"
        android:paddingLeft="20dp"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:hint="@string/nmhint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.25"
        />
    <EditText
        android:id="@+id/p1"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:hint="@string/pswrdhint"
        android:inputType="textPassword"
        android:background="@drawable/rgstrfrm"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.37"
        />
    <EditText
        android:id="@+id/p2"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:hint="@string/pswrd2"
        android:background="@drawable/rgstrfrm"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.50"
        />

    <Button
        android:id="@+id/rgsterbtn2"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@drawable/rgstrbtn"
        android:text="@string/register"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

</androidx.constraintlayout.widget.ConstraintLayout>